--- a/wercker.yml
+++ b/wercker.yml
@@ -6,7 +6,7 @@ build:
             code: mkdir -p $WERCKER_CACHE_DIR/bin ; docker run --rm -v $WERCKER_CACHE_DIR/bin:/target jpetazzo/nsenter
 
         - script:
-            name: インストール確認
+            name: check install
             code: test -x $WERCKER_CACHE_DIR/bin/docker-enter
 
         - script:
