--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,16 +1,47 @@
-name: docker-ansible-environment
+name: docker-ansible
 version: 0.0.1
 inherits: wercker-labs/docker
-type: language
+type: main
 platform: ubuntu@12.04
-description: ansible environments.(docker-enter, centos7, ubuntu 14.04)
+description: "A box create to build, test and deploy ansible-playbook"
 keywords:
-  - docker
-  - ansible
-      script: |
-        mkdir -p $WERCKER_CACHE_DIR/bin ; docker run --rm -v $WERCKER_CACHE_DIR/bin:/target jpetazzo/nsenter
-        docker pull ansible/centos7-ansible
-        docker pull ansible/ubuntu14.04-ansible
+    - docker
+    - centos7
+    - ubuntu14.04
+    - ansible
+    - docker-enter
+ 
+script: |
+    # install docker-enter
+    mkdir -p $WERCKER_CACHE_DIR/bin ; docker run --rm -v $WERCKER_CACHE_DIR/bin:/target jpetazzo/nsenter
 
-   
-        
+    # check docker-enter
+    test -x $WERCKER_CACHE_DIR/bin/docker-enter
+
+    # install ansible to local
+    sudo apt-get update
+    sudo apt-get install python-pip -y
+    sudo pip install ansible
+
+    # check ansible
+    ansible-playbook --version
+
+    # pull centos7-ansible
+    docker pull ansible/centos7-ansible
+
+    # image check
+    docker images ansible/centos7-ansible | grep "ansible/centos7-ansible"
+
+    # check centos7-ansible
+    docker run --rm ansible/centos7-ansible $ANSIBLE_PATH/ansible-playbook --version
+
+    # pull ubuntu14.04-ansible
+    docker pull ansible/ubuntu14.04-ansible
+
+    # image check
+    docker images ansible/ubuntu14.04-ansible | grep "ansible/ubuntu14.04-ansible"
+
+    # check ubuntu14.04-ansible
+    docker run --rm ansible/ubuntu14.04-ansible $ANSIBLE_PATH/ansible-playbook --version
+
+
