--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -12,6 +12,11 @@ keywords:
     - docker-enter
  
 script: |
+    # install docekr
+    sudo apt-get update
+    sudo apt-get install linux-image-generic-lts-trusty linux-headers-generic-lts-trusty
+    sudo service docker.io restart
+    
     # install docker-enter
     mkdir -p $WERCKER_CACHE_DIR/bin ; docker run --rm -v $WERCKER_CACHE_DIR/bin:/target jpetazzo/nsenter
 
@@ -19,7 +24,6 @@ script: |
     test -x $WERCKER_CACHE_DIR/bin/docker-enter
 
     # install ansible to local
-    sudo apt-get update
     sudo apt-get install python-pip -y
     sudo pip install ansible
 
