--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -14,6 +14,7 @@ keywords:
 script: |
     # install docekr
     sudo sh -c "echo deb https://get.docker.com/ubuntu docker main > /etc/apt/sources.list.d/docker.list"
+    sudo apt-get install apt-transport-https
     sudo apt-get update  
     sudo apt-get install lxc-docker
     sudo service docker restart
