--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -13,7 +13,7 @@ keywords:
  
 script: |
     # install docekr
-    update
+    sudo apt-get update
     sudo apt-get install apt-transport-https
     sudo sh -c "echo deb https://get.docker.com/ubuntu docker main > /etc/apt/sources.list.d/docker.list"
     sudo apt-get update  
