--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -21,10 +21,10 @@ script: |
     sudo service docker restart
    
     # install docker-enter
-    mkdir -p $WERCKER_CACHE_DIR/bin ; docker run --rm -v $WERCKER_CACHE_DIR/bin:/target jpetazzo/nsenter
+    sudo mkdir -p $WERCKER_CACHE_DIR/bin ; sudo docker run --rm -v $WERCKER_CACHE_DIR/bin:/target jpetazzo/nsenter
 
     # check docker-enter
-    test -x $WERCKER_CACHE_DIR/bin/docker-enter
+    sudo test -x $WERCKER_CACHE_DIR/bin/docker-enter
 
     # install ansible to local
     sudo apt-get install python-pip -y
@@ -34,22 +34,22 @@ script: |
     ansible-playbook --version
 
     # pull centos7-ansible
-    docker pull ansible/centos7-ansible
+    sudo docker pull ansible/centos7-ansible
 
     # image check
-    docker images ansible/centos7-ansible | grep "ansible/centos7-ansible"
+    sudo docker images ansible/centos7-ansible | grep "ansible/centos7-ansible"
 
     # check centos7-ansible
-    docker run --rm ansible/centos7-ansible $ANSIBLE_PATH/ansible-playbook --version
+    sudo docker run --rm ansible/centos7-ansible $ANSIBLE_PATH/ansible-playbook --version
 
     # pull ubuntu14.04-ansible
-    docker pull ansible/ubuntu14.04-ansible
+    sudo docker pull ansible/ubuntu14.04-ansible
 
     # image check
-    docker images ansible/ubuntu14.04-ansible | grep "ansible/ubuntu14.04-ansible"
+    sudo docker images ansible/ubuntu14.04-ansible | grep "ansible/ubuntu14.04-ansible"
 
     # check ubuntu14.04-ansible
-    docker run --rm ansible/ubuntu14.04-ansible $ANSIBLE_PATH/ansible-playbook --version
+    sudo docker run --rm ansible/ubuntu14.04-ansible $ANSIBLE_PATH/ansible-playbook --version
 
 env:
     ANSIBLE_PATH: "/opt/ansible/ansible/bin"
